<resources>
    <string name="app_name">GestionCentroDocente</string>
    <string name="registro"><u>Registrarse</u></string>
    <string name="textViewPassword">Contaseña</string>
    <string name="introducePassword">Introduce la contraseña</string>
    <string name="iniciaSesion">INICIA SESIÓN</string>
    <string name="introduceNombre">Introduce aqui tu nombre</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="bienvenidoMain">Bienvenido a San Viator</string>
    <string name="introduceApellidos">Introduce tus apellidos</string>
    <string name="apellidosUsuario">Apellidos</string>
    <string name="introduceEmail">Introduce tu email</string>
    <string name="email">Email</string>
    <string name="categoriaDocente">Selecciona tu rol</string>
    <string name="saludoDocente">Bienvenido a su perfil privado</string>
    <string name="editarPerfil">Editar perfil</string>
    <string name="mostrarHorario">Horario</string>
    <string name="gestionarPermisos">Gestionar Permisos</string>
    <string name="gestionarTareasAdmin">Gestionar Tareas Administrativas</string>
    <string name="gestionarAusencias">Notificar ausencias</string>
    <string name="mirarCalendario">Consultar Reuniones</string>
    <string name="notificaciones">Notificaciones</string>
    <string name="completaRegistro">Completa tu registro</string>
    <string name="introduceTitulacion">Introduce tu titulación</string>
    <string name="titulacion">Titulación</string>
    <string name="introduceTelefono">Introduce tu teléfono</string>
    <string name="telefono">Teléfono de contacto</string>
    <string name="enviarAvisos">Enviar avisos</string>
    <string name="cerrarSesion">Cerrar Sesión</string>
    <string name="femenino">Femenino</string>
    <string name="masculino">Masculino</string>
    <string name="neutro">Neutro</string>
    <string name="informeGuardias">Informe Guardias</string>
    <string name="eligeGenero">Selecciona tu género</string>
    <string name="sisGes">Sist.Gestión</string>
    <string name="accesoDatos">Acceso"\n"Datos</string>
    <string name="empresa">Empresa</string>
    <string name="progMul">Prog."\n"Multimedia</string>
    <string name="desInter">Des."\n"Interfaces</string>
    <string name="psp">PSP</string>
    <string name="mensaje">Mensaje</string>
    <string name="tipoNotificacion">Tipo notificación</string>
    <string name="asunto">Asunto</string>
    <string name="emisor">Emisor</string>
    <string name="GPasunto">Asunto</string>
    <string name="pantallaGPfechaInicio">Fecha Inicio</string>
    <string name="pantallaGPfechaFin">Fecha Final</string>
    <string name="eligeFecha">Elige una fecha</string>
    <string name="pantallaGPestadoSolicitud">Estado de la solicitud</string>
    <string name="pantallaGPpermPendientes">Permisos pendientes</string>
    <string name="numeroPrueba">2</string>
    <string name="volver">VOLVER</string>
    <string name="eligeHora">Elige una hora</string>
    <string name="pantallaGPhoraInicio">Hora Inicio</string>
    <string name="pantallaGPhoraFin">Hora Final</string>
    <string name="aceptar">Aceptar</string>
    <string name="calendario">Calendario</string>
    <string name="fijarTareasAdmin">Fijar tareas administrativas</string>
    <string name="tipoTarea">Tipo de tarea</string>
    <string name="diasProrroga">Días solicitud prórroga</string>
    <string name="enviar">ENVIAR</string>
    <string name="pantallaGTreceptores">Receptores de tarea</string>
    <string name="TVplazoEntrega">Plazo de entrega</string>
    <string name="adjudicarTarea">ADJUDICAR TAREA</string>
    <string name="pantallaEAreceptores">Receptores del aviso</string>
    <string name="EAfechaEnvio">Fecha de envío</string>
    <string name="tipoAviso">Selecciona el tipo de aviso</string>
    <string name="fechaGuardia">Fecha de la guardia</string>
    <string name="personaGuardia">Persona a cargo de la guardia</string>
    <string name="tipoGuardia">Tipo de guardia</string>
    <string name="pantallaGobservaciones">Observaciones</string>
    <string name="guardarInforme">Guardar informe</string>
    <string name="enviarMensajes">Enviar mensajes</string>
    <string name="pantallaEMreceptores">Destinatario/s:</string>
    <string name="escribeMensaje">Escribe tu mensaje:</string>
    <string name="defineAviso">Define tu aviso:</string>
    <string name="emailText">Correo Electrónico</string>
    <string name="introduceEmail2">Introduce tu email</string>
    <string name="introduceDNItext">Introduce tu DNI</string>
    <string name="registroPR">REGISTRO</string>
    <string name="guardar">GUARDAR</string>
    <string name="textoAcercaDe">Acerca de...</string>
    <string name="textoPerfil">Perfil</string>
    <string name="textoCerrarSesion">Cerrar Sesión</string>
    <string name="nombre">Nombre</string>
    <string name="GPcriteriosComunes">Criterios Comunes</string>
    <string name="GPcriteriosEspe">Criterios Específicos</string>
    <string name="tipoNotificacionCard">Tipo Notificacion</string>
    <string name="pantallaGTJEreceptores">RECEPTORES</string>
    <string name="descripcionTarea">Descripción de la tarea</string>
    <string name="appRealizada">Aplicación desarrollada por Juana Sierra</string>
    <string name="gestionGuardias">Gestión de Guardias</string>
    <string name="fijarReuniones">FIJAR REUNIONES</string>
    <string name="reuniones">REUNIONES</string>
    <string name="fechaReunion">Fecha Reunion</string>
    <string name="descripcionReunion">Descripción Reunión</string>
    <string name="pantallaJEReunion">Receptores Reunión</string>
    <string name="receptorGuardia">Receptor Guardia</string>
    <string name="nombreTarea">Nombre Tarea</string>
    <string name="nombreReunion">Nombre Reunion</string>
</resources>