<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayoutPantallaPrincipalPadreCoordinador"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".PantallaPrincipal">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/encabezadoMenuPrincipal"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:backgroundTint="@color/blue_dark"
        app:menu="@menu/menu_principal"
        />

    <LinearLayout
        android:id="@+id/linearContenedorSuperior"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:gravity="start|center">
        <TextView
            android:id="@+id/notificaciones"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/notificaciones"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            >
        </TextView>
        <ImageView
            android:id="@+id/imagenNotificaciones"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@android:drawable/ic_dialog_email"
            android:scaleType="fitCenter">
        </ImageView>
    </LinearLayout>



    <LinearLayout
        android:id="@+id/linearOpciones"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"

        >

        <ImageView
            android:id="@+id/imagenLogoCentro"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:src="@drawable/docente"
            android:scaleType="fitCenter"
            android:layout_marginBottom="20dp">
        </ImageView>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/ppBotonMirarHorario"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/mostrarHorario"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/gestionPermisos"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/gestionarPermisos"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/gestionTareasAdmin"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/gestionarTareasAdmin"
            android:layout_marginTop="15dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/gestionAusencias"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/gestionarAusencias"
            android:layout_marginTop="15dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/calendarioReuniones"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/mirarCalendario"
            android:layout_marginTop="15dp"
            />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/gestionAvisosCoordinador"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/blue_dark"
            android:text="@string/enviarAvisos"
            android:layout_marginTop="15dp"
            />



    </LinearLayout>







</LinearLayout>