<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayoutPantallaPrincipalJefeEstudios"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/blue"
    tools:context=".PantallaPrincipal">


    <TextView
        android:id="@+id/textoBienvenida"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/saludoDocente"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_marginBottom="20dp"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        >
    </TextView>


    <LinearLayout
        android:id="@+id/linearPadreBotonesPrincipales"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ppBotonEditarPerfil"
            android:layout_width="180dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"
            android:text="@string/editarPerfil"
            android:textColor="@color/blue_dark"
            android:backgroundTint="@color/white">
        </Button>
        <Button
            android:id="@+id/botonCerrarSesion"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/cerrarSesion"
            android:layout_marginLeft="20dp"
            android:textColor="@color/blue_dark"
            android:backgroundTint="@color/white"
            >

        </Button>

    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearContenedor"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:background="@color/white"

        >
    <LinearLayout
        android:id="@+id/linearContenedorSuperiores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal"
        android:background="@color/white">
        <LinearLayout
            android:id="@+id/linearCerrarSesion"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:background="@color/white"

            android:gravity="left"
            >

            <Button
                android:id="@+id/ppBotonMirarHorario"
                android:layout_width="180dp"
                android:layout_marginLeft="20dp"
                android:layout_height="wrap_content"
                android:text="@string/mostrarHorario"
                android:textColor="@color/black"
                android:backgroundTint="@color/gray_light">
            </Button>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearNotificaciones"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="right"
            >
            <TextView
                android:id="@+id/notificaciones"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notificaciones"
                android:textSize="15sp"
                android:layout_marginRight="15dp"
                android:textColor="@color/black"
                >
            </TextView>
            <ImageView
                android:id="@+id/imagenNotificaciones"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@android:drawable/ic_dialog_email"
                android:scaleType="fitCenter"
                android:layout_marginRight="20dp">
            </ImageView>
        </LinearLayout>

    </LinearLayout>
        <LinearLayout
            android:id="@+id/linearOpciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/adjudicarTareasAdmin"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fijarTareasAdmin"
                android:textSize="20sp"
                android:textColor="@color/gray_dark"
                >
            </TextView>
            <TextView
                android:id="@+id/enviarMensajes"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/enviarMensajes"
                android:textSize="20sp"
                android:textColor="@color/gray_dark"
                >
            </TextView>
            <TextView
                android:id="@+id/calendarioReuniones"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mirarCalendario"
                android:textSize="20sp"
                android:textColor="@color/gray_dark"
                >
            </TextView>

            <TextView
                android:id="@+id/gestionInformeGuardias"
                android:layout_marginTop="15dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/informeGuardias"
                android:textSize="20sp"
                android:textColor="@color/gray_dark"
                >
            </TextView>



        </LinearLayout>



    </LinearLayout>



</LinearLayout>