<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".PantallaEnviarAvisos">

    <LinearLayout
        android:id="@+id/lineaLayoutPantallaAvisos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:background="@color/blue_light">



        <TextView
            android:id="@+id/pantallaEAtipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipoAviso"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:textSize="18sp">
        </TextView>

        <Spinner
            android:id="@+id/spinnerEA"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textAlignment="center"
            android:padding="5dp"
            android:layout_marginBottom="10dp">

        </Spinner>

        <TextView
            android:id="@+id/pantallaEAreceptores"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pantallaEAreceptores"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="18sp"
            tools:ignore="DuplicateIds">
        </TextView>
        <EditText
            android:id="@+id/pantallaEAlistaPersonas"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="Lucia,Pepe..."
            android:imeOptions="actionSearch"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            >
        </EditText>


        <TextView
            android:id="@+id/fechaEnvioAviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EAfechaEnvio"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>
        <Button
            android:id="@+id/pantallaEAeligeFechaBoton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_dark"
            android:layout_marginBottom="10dp"
            android:text="@string/eligeFecha">

        </Button>
        <TextView
            android:id="@+id/pantallaEAfecha"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:background="@color/white"
            android:padding="10dp"
            android:layout_marginBottom="20dp"
            >
        </TextView>





        <TextView
            android:id="@+id/defineTuAviso"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/defineAviso"
            android:layout_marginBottom="10dp"
            android:textStyle="bold"
            android:textSize="18sp">
        </TextView>
        <EditText
            android:id="@+id/defineTuAvisoEscrito"
            android:layout_width="300dp"
            android:background="@color/white"
            android:padding="5dp"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:lines="2"
            android:scrollbars="vertical"
            android:textAlignment="center"
            android:hint="Ingresa tu aviso aquí">

        </EditText>

        <Button
            android:id="@+id/botonPantallaEAenviarAvisos"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_dark"
            android:layout_marginTop="70dp"
            android:text="@string/enviarAvisos"
            >
        </Button>


    </LinearLayout>

</LinearLayout>